--- a/Authorization.Core.UI/Authorization.Core.UI.csproj
+++ b/Authorization.Core.UI/Authorization.Core.UI.csproj
@@ -85,6 +85,13 @@
     <None Include="buildTransitive\*" Pack="true" PackagePath="buildTransitive\" />
   </ItemGroup>
 
+  <Target Name="_CopyCssBundle" BeforeTargets="_GenerateAuthUIPackItems">
+    <ItemGroup>
+      <_SourceFiles Include="$(IntermediateOutputPath)$(Configuration)\$(TargetFramework)\scopedcss\projectbundle\$(AssemblyName).bundle.scp.css" />
+    </ItemGroup>
+    <Copy SourceFiles="@(_SourceFiles)" DestinationFolder="assets\BS5" />
+  </Target>
+
   <Target Name="GetAuthUIAssets" Returns="@(ReferenceAsset)">
     <PropertyGroup>
       <_ReferenceAssetContentRoot Condition="'$(IdentityDefaultUIFramework)' == 'Bootstrap5'">assets/BS5</_ReferenceAssetContentRoot>
@@ -98,13 +105,7 @@
         <ContentRoot>$([System.IO.Path]::GetFullPath($(_ReferenceAssetContentRoot)))</ContentRoot>
       </ReferenceAssetCandidates>
     </ItemGroup>
-    <DefineStaticWebAssets
-      Condition="'@(ReferenceAssetCandidates->Count())' != '0'"
-      CandidateAssets="@(ReferenceAssetCandidates)"
-      SourceId="$(PackageId)"
-      SourceType="Project"
-      AssetKind="All"
-      BasePath="$(StaticWebAssetBasePath)" >
+    <DefineStaticWebAssets Condition="'@(ReferenceAssetCandidates-&gt;Count())' != '0'" CandidateAssets="@(ReferenceAssetCandidates)" SourceId="$(PackageId)" SourceType="Project" AssetKind="All" BasePath="$(StaticWebAssetBasePath)">
       <Output TaskParameter="Assets" ItemName="ReferenceAsset" />
     </DefineStaticWebAssets>
     <ItemGroup>
@@ -125,22 +126,10 @@
         <RelativePath>%(RecursiveDir)%(FileName)%(Extension)</RelativePath>
       </BS5AssetCandidates>
     </ItemGroup>
-    <DefineStaticWebAssets 
-      Condition="'@(BS4AssetCandidates->Count())' != '0'" 
-      CandidateAssets="@(BS4AssetCandidates)" 
-      SourceId="$(PackageId)" SourceType="Discovered" 
-      AssetKind="All" 
-      ContentRoot="assets/BS4" 
-      BasePath="$(StaticWebAssetBasePath)" >
+    <DefineStaticWebAssets Condition="'@(BS4AssetCandidates-&gt;Count())' != '0'" CandidateAssets="@(BS4AssetCandidates)" SourceId="$(PackageId)" SourceType="Discovered" AssetKind="All" ContentRoot="assets/BS4" BasePath="$(StaticWebAssetBasePath)">
       <Output TaskParameter="Assets" ItemName="BS4Assets" />
     </DefineStaticWebAssets>
-    <DefineStaticWebAssets 
-      Condition="'@(BS5AssetCandidates->Count())' != '0'" 
-      CandidateAssets="@(BS5AssetCandidates)" 
-      SourceId="$(PackageId)" SourceType="Discovered" 
-      AssetKind="All" 
-      ContentRoot="assets/BS5" 
-      BasePath="$(StaticWebAssetBasePath)">
+    <DefineStaticWebAssets Condition="'@(BS5AssetCandidates-&gt;Count())' != '0'" CandidateAssets="@(BS5AssetCandidates)" SourceId="$(PackageId)" SourceType="Discovered" AssetKind="All" ContentRoot="assets/BS5" BasePath="$(StaticWebAssetBasePath)">
       <Output TaskParameter="Assets" ItemName="BS5Assets" />
     </DefineStaticWebAssets>
 
