--- a/Authorization.Core.UI.Test.Web/Authorization.Core.UI.Test.Web.csproj
+++ b/Authorization.Core.UI.Test.Web/Authorization.Core.UI.Test.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,5 +22,61 @@
   <ItemGroup>
     <ProjectReference Include="..\Authorization.Core.UI\Authorization.Core.UI.csproj" />
   </ItemGroup>
+
+  <!--
+  *************************************************************************************************
+
+   Since we are not using a PackageReference to include the Authorization.Core.UI project, we need 
+   to manually copy the items that would normally be added in "~/wwwroot/_content" by NuGet. 
+      
+  *************************************************************************************************
+  -->
+
+  <PropertyGroup>
+    <_CoreUiProjectName>Authorization.Core.UI</_CoreUiProjectName>
+    <_CoreUiPackageName>CRFricke.$(_CoreUiProjectName)</_CoreUiPackageName>
+    <_CoreUiProjectPath>$(MSBuildStartupDirectory)\$(_CoreUiProjectName)</_CoreUiProjectPath>
+    <_CoreUiProjectBundleName>$(_CoreUiPackageName).bundle.scp.css</_CoreUiProjectBundleName>
+  </PropertyGroup>
+
+  <Target Name="CopyCoreUiAssets" BeforeTargets="PreBuildEvent">
+
+    <PropertyGroup>
+      <_CoreUiContentPath>$(MSBuildThisFileDirectory)wwwroot\_content\$(_CoreUiPackageName)</_CoreUiContentPath>
+      <_CoreUiCssBundlePath>$(_CoreUiProjectPath)\$(IntermediateOutputPath)scopedcss\projectbundle\$(_CoreUiProjectBundleName)</_CoreUiCssBundlePath>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <_AssetItems Condition="'$(IdentityDefaultUIFramework)' == 'Bootstrap4'" Include="$(_CoreUiProjectPath)\assets\BS4\**" />
+      <_AssetItems Condition="'$(IdentityDefaultUIFramework)' != 'Bootstrap4'" Include="$(_CoreUiProjectPath)\assets\BS5\**" />
+      <_AssetItems Include="$(_CoreUiCssBundlePath)" />
+    </ItemGroup>
+
+    <Copy SourceFiles="@(_AssetItems)" DestinationFiles="$(_CoreUiContentPath)\%(RecursiveDir)%(Filename)%(Extension)" SkipUnchangedFiles="true" />
+    
+  </Target>
+
+  <!--
+    Now we need to add/fixup the @import statement at the beginning of this project's scoped CSS bundle.
+  -->
+
+  <Target Name="FixupScopedCssBundle" AfterTargets="PostBuildEvent">
+
+    <PropertyGroup>
+      <_SearchText>_content/$(MSBuildProjectName)/_content</_SearchText>
+      <_ReplaceText>_content</_ReplaceText>
+      <_BundlePath>$(MSBuildThisFileDirectory)$(IntermediateOutputPath)scopedcss\bundle\$(MSBuildProjectName).styles.css</_BundlePath>
+      <_BundleText>$([System.IO.File]::ReadAllText($(_BundlePath)).Replace($(_SearchText), $(_ReplaceText)))</_BundleText>
+      <_ImportStatement>@import '_content/$(_CoreUiPackageName)/$(_CoreUiProjectBundleName)'%3B</_ImportStatement>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <_BundleLines Condition="$(_BundleText.StartsWith(&quot;@import&quot;)) == false" Include="$(_ImportStatement)" />
+      <_BundleLines Include="$(_BundleText)" />
+    </ItemGroup>
+
+    <WriteLinesToFile File="$(_BundlePath)" Lines="@(_BundleLines)" Overwrite="true" />
+
+  </Target>
 
 </Project>
