Display contents of Core.UI\obj folder - 2nd try

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,4 +51,4 @@ jobs:
     - name: Display Core.UI obj folder contents
       if: ${{ failure() }}
       shell: pwsh
-      run: Get-ChildItem -Path Authorization.Core.UI\obj -Recurse
+      run: Get-ChildItem -Path Authorization.Core.UI\obj -Name -Recurse
