--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Setup PowerShell
-      uses: CRFricke/Setup-PowerShell@v1.0.6
+      uses: CRFricke/Setup-PowerShell@v1.0.
 
     - name: Checkout
       uses: actions/checkout@v3
