Install Playwright before running tests.

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -44,6 +44,10 @@ jobs:
     - name: Build
       run: dotnet build --configuration $BUILD_CONFIG --no-restore /p:Version=$BUILD_VERSION
 
+    - name: Install Playwright
+      shell: pwsh
+      run: ./Authorization.Core.UI.Tests.Integration/bin/Release/net7.0/playwright.ps1 install
+
     - name: Test
       run: dotnet test --configuration $BUILD_CONFIG --no-build --verbosity normal
 
