--- a/Authorization.Core/Authorization.Core.csproj
+++ b/Authorization.Core/Authorization.Core.csproj
@@ -46,11 +46,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" Version="8.0" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CRFricke.EF.Core.Utilities" Version="8.0.0-beta1.1" />
+    <PackageReference Include="CRFricke.EF.Core.Utilities" Version="8.0.0-beta1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0-preview.7.23375.9" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
       <PrivateAssets>all</PrivateAssets>
