--- a/Authorization.Core/Authorization.Core.csproj
+++ b/Authorization.Core/Authorization.Core.csproj
@@ -40,7 +40,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\assets\icon.png" Pack="True" PackagePath="\"/>
+    <None Include="..\icon.png" Pack="True" PackagePath="\"/>
     <None Include="..\README.md" Pack="True" PackagePath="\"/>
   </ItemGroup>
 
